# kaggle-ubc-ocean

./: .gitignore  README.md  pyproject.toml
src/ubc_ocean/: image_hash.py  image_stat.py  utils.py
