[build-system]
requires = [
    "setuptools>=61",
    # "setuptools_scm[toml]>=7",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "ubc-ocean"
version = "0.0.1"
description = "Helper scripts for Kaggle competition UBC-OCEAN"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "timm",
    "torch",
    "scipy",
    "numpy",
    "pandas",
    "imagehash",
    "matplotlib",
    "scikit-learn",
    "gpustat",
]

[tool.setuptools.packages.find]
where = ["src"]
